# immich_upload_daemon

./: .env.sample  .gitignore  README.md  build.py  flake.nix  immich_upload_daemon.service  main.py  postinst  pyproject.toml
.github/workflows/: build.yml
src/: database.py  immich.py
src/immich_upload_daemon/: database.py  files.py  immich.py  main.py  network.py  utils.py
systemd/: immich_upload_daemon.service
