[project]
name = "immich-upload-daemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "aiosqlite>=0.21.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pyxdg>=0.28",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "types-aiofiles>=24.1.0.20241221",
    "types-pyxdg>=0.28.0.20240106",
]
